objects/PureCloud_Trial__c.object
<CustomObject>
    <description>A method of requesting and tracking PureCloud preview and beta participants</description>
    <fields>
        <fullName>AWS_Predefined_Region_Map__c</fullName>
        <formula>CASE( AWS_Predefined_Region__c , 
&quot;Americas (US EAST)&quot;, &quot;us-east-1&quot;,
&quot;Americas (US WEST)&quot;, &quot;us-west-2&quot;,
&quot;EMEA (Ireland)&quot;, &quot;eu-west-1&quot;,
&quot;EMEA (Germany)&quot;, &quot;eu-central-1&quot;,
&quot;APAC (Australia)&quot;, &quot;ap-southeast-2&quot;,
&quot;APAC (Japan)&quot;, &quot;ap-northeast-1&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AWS Predefined Region Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AWS_Predefined_Region__c</fullName>
        <description>What it Does: Indicates the AWS region associated with the PureCloud Project record and PS Project
Downstream Impact: Defines the AWS region (friendly name)
Department Owner: Professional Services</description>
        <label>AWS Predefined Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Americas (US EAST)</fullName>
                    <default>true</default>
                    <label>Americas (US EAST)</label>
                </value>
                <value>
                    <fullName>APAC (Australia)</fullName>
                </value>
                <value>
                    <fullName>EMEA (Ireland)</fullName>
                </value>
                <value>
                    <fullName>EMEA (Germany)</fullName>
                </value>
                <value>
                    <fullName>APAC (Japan)</fullName>
                </value>
                <value>
                    <fullName>Americas (US WEST)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account1__c</fullName>
        <formula>HYPERLINK(Opportunity__r.Account.Name, Opportunity__r.Account.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PureCloud Projects</relationshipLabel>
        <relationshipName>PureCloud_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <inlineHelpText>Please add notes describing the following:

1. IVR functionality required
2. Screen Pop applications required
3. Describe the long term opportunity for a PureCloud solution?
4. Why is PureCloud a better fit than CaaS?</inlineHelpText>
        <label>Additional Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attended_API_Webinar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended API Webinar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attended_Dialer_Webinar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended Dialer Webinar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attended_Enablement_Webinar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended Enablement Webinar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Activation_Status__c</fullName>
        <description>Purpose: Used to indicate the status of automated activation for PureCloud PS projects 
Owner: Professional Services</description>
        <label>Auto Activation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queued for Automation</fullName>
                </value>
                <value>
                    <fullName>Issue - See Notes</fullName>
                </value>
                <value>
                    <fullName>Sent Invite</fullName>
                </value>
                <value>
                    <fullName>Activation Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? Lookup to quote for the approved PC project
Downstream Impact? Effects PC Project creation
Which department is owner? IT/PureCloud Team</description>
        <label>Quote</label>
        <referenceTo>BigMachines__Quote__c</referenceTo>
        <relationshipLabel>PureCloud Projects</relationshipLabel>
        <relationshipName>PureCloud_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Champion_Email__c</fullName>
        <formula>Opportunity_PureCloud_Enablement__r.Business_Champion__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Champion Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Center_Admin_Email__c</fullName>
        <formula>Opportunity_PureCloud_Enablement__r.Contact_Center_Admin__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Center Admin Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Language_Map__c</fullName>
        <formula>CASE( Contact_Language__c , 
&quot;English (United States)&quot;, &quot;en-us&quot;,
&quot;Spanish&quot;, &quot;es&quot;,
&quot;German&quot;, &quot;de&quot;,
&quot;French&quot;, &quot;fr&quot;,
&quot;Italian&quot;, &quot;it&quot;,
&quot;Japanese&quot;, &quot;ja&quot;,
&quot;Korean&quot;, &quot;ko&quot;,
&quot;Dutch&quot;, &quot;nl&quot;,
&quot;Norwegian&quot;, &quot;no&quot;,
&quot;Polish&quot;, &quot;pl&quot;,
&quot;Portuguese (Brazil)&quot;, &quot;pt-br&quot;,
&quot;Swedish&quot;, &quot;sv&quot;,
&quot;Thai&quot;, &quot;th&quot;,
&quot;Turkish&quot;, &quot;tr&quot;,
&quot;Chinese (China)&quot;, &quot;zh-ch&quot;,
&quot;Chinese (Taiwan)&quot;, &quot;zh-tw&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Language Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Language__c</fullName>
        <description>What it Does: Indicates the Contact Language associated with the PureCloud Project record and PS Project
Downstream Impact: Defines the Contact Language (friendly name)
Department Owner: Professional Services</description>
        <label>Contact Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English (United States)</fullName>
                    <default>true</default>
                    <label>English (United States)</label>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Brazil)</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
                <value>
                    <fullName>Chinese (China)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Taiwan)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Adoption_Classification__c</fullName>
        <label>Current Adoption Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exceeded</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Delivery_Status__c</fullName>
        <label>Delivery Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <color>#009900</color>
                    <default>true</default>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                    <color>#FFFF66</color>
                    <label>Yellow</label>
                </value>
                <value>
                    <fullName>Red</fullName>
                    <color>#FF0000</color>
                    <label>Red</label>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Project_Manager_Email__c</fullName>
        <formula>Opportunity_PureCloud_Enablement__r.Customer_Project_Manager__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Project Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_to_Full_Adoption__c</fullName>
        <formula>Full_Adoption_Achieved_on_Date__c  - Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>#Days to Full Adoption calculates the time in days that passed between Opportunity close date and customer Full seat Adoption</inlineHelpText>
        <label># Days to Full Adoption</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Go_Live__c</fullName>
        <formula>Desired_Go_Live_Date__c - Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>#Days to Go Live calculates the time in days between Opportunity close date and customer Go Live</inlineHelpText>
        <label># Days to Go Live</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_QuickStart_Complete__c</fullName>
        <formula>QuickStart_Completion_Date__c  - Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>#Days to QuickStart Complete calculates the time in days that passed from Opportunity close date and completion of customer QuickStart.</inlineHelpText>
        <label># Days to QuickStart Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_SIP_Dailtone__c</fullName>
        <formula>SIP_Dialtone_Completion_Date__c  - Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>#Days to SIP/Dialtone calculates the time in days that passed between Opportunity close date and customer SIP/Dialtone.</inlineHelpText>
        <label># Days to SIP/Dailtone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desired_Contact_Center_Functionality__c</fullName>
        <label>Desired Contact Center Functionality</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACD</fullName>
                </value>
                <value>
                    <fullName>Automated Recording (voice only)</fullName>
                </value>
                <value>
                    <fullName>Quality Management (score cards)</fullName>
                </value>
                <value>
                    <fullName>Screen Pop</fullName>
                </value>
                <value>
                    <fullName>Voice Routing</fullName>
                </value>
                <value>
                    <fullName>Web Chat Routing</fullName>
                </value>
                <value>
                    <fullName>Automated Outbound Dialing (no blending)</fullName>
                </value>
                <value>
                    <fullName>Agent Scripting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Desired_Contact_Center_Use__c</fullName>
        <description>Formula checkbox is checked when any desired contact center functionality has been selected or any contact center users are entered.</description>
        <formula>OR(NOT(ISBLANK(Desired_Contact_Center_Functionality__c)), NOT(ISBLANK(Number_of_Contact_Center_Users__c)))</formula>
        <inlineHelpText>Formula checkbox is checked when any desired contact center functionality has been selected or any contact center users are entered.</inlineHelpText>
        <label>Desired Contact Center Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desired_General_Functionality__c</fullName>
        <label>Desired General Functionality</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Directory</fullName>
                </value>
                <value>
                    <fullName>Social Customer Service</fullName>
                </value>
                <value>
                    <fullName>UC</fullName>
                </value>
                <value>
                    <fullName>IVR</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Desired_Go_Live_Date__c</fullName>
        <defaultValue>TODAY()  + 30</defaultValue>
        <inlineHelpText>When would the customer like to start using the system?</inlineHelpText>
        <label>Go Live Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desired_IVR_Functionalty__c</fullName>
        <label>Desired IVR Functionalty</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DTMF</fullName>
                </value>
                <value>
                    <fullName>iASR</fullName>
                </value>
                <value>
                    <fullName>3rd party integration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Desired_IVR_Use__c</fullName>
        <description>Formula checkbox is checked when any desired IVR functionality has been selected.</description>
        <formula>NOT(ISBLANK(Desired_IVR_Functionalty__c))</formula>
        <inlineHelpText>Formula checkbox is checked when any desired IVR functionality has been selected.</inlineHelpText>
        <label>Desired IVR Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desired_Screen_Pop_Integration__c</fullName>
        <inlineHelpText>List integrations for desired screen pop functionality</inlineHelpText>
        <label>Desired Screen Pop Integration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Direct_or_Indirect__c</fullName>
        <formula>TEXT(Opportunity__r.Direct_Indirect_Sale__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct or Indirect</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Status__c</fullName>
        <label>Email Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Sent</fullName>
                    <default>true</default>
                    <label>Not Sent</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enablement_Model__c</fullName>
        <formula>TEXT( Opportunity_PureCloud_Enablement__r.Enablement_Model__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enablement Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enablement_Partner__c</fullName>
        <formula>Opportunity_PureCloud_Enablement__r.Enablement_Partner__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enablement Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Kick_Off_Date__c</fullName>
        <description>Description: The date that the PureCloud Project was started/kicked off with the customer
Owner: Professional Services</description>
        <label>External Kick-Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Adoption_Achieved_on_Date__c</fullName>
        <label>Full Adoption Achieved on Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Infrastructure_Expert_Email__c</fullName>
        <formula>Opportunity_PureCloud_Enablement__r.Infrastructure_Expert__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Infrastructure Expert Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Category__c</fullName>
        <label>Issue Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Shared Success</fullName>
                </value>
                <value>
                    <fullName>Product Features/Enhancements</fullName>
                </value>
                <value>
                    <fullName>Telephony Connection</fullName>
                </value>
                <value>
                    <fullName>Hardware/Devices</fullName>
                </value>
                <value>
                    <fullName>Software Defects</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Subcategory__c</fullName>
        <label>Issue Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Issue_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Missed Expectations</fullName>
                </value>
                <value>
                    <fullName>Customer Responsiveness/Availability</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Integrations</fullName>
                </value>
                <value>
                    <fullName>WebRTC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Converted to PCV from LDM</fullName>
                </value>
                <value>
                    <fullName>SIP Carrier</fullName>
                </value>
                <value>
                    <fullName>Customer Network Config</fullName>
                </value>
                <value>
                    <fullName>Edge Device RMAs</fullName>
                </value>
                <value>
                    <fullName>Edge Device Defects</fullName>
                </value>
                <value>
                    <fullName>Phone Provisioning</fullName>
                </value>
                <value>
                    <fullName>Product Features Other</fullName>
                </value>
                <value>
                    <fullName>Software Defects Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyPCid__c</fullName>
        <externalId>true</externalId>
        <label>Legacy PC id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>License_Enabled_Date__c</fullName>
        <description>What it does: Tracks the date that the licenses were enabled for a PureCloud Project deployment
Downstream impact: Relates to the PureCloud Project deployments for PS only
Which department is owner: Professional Services</description>
        <label>License Enabled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Contact_Center_Users__c</fullName>
        <label>Number of Contact Center Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Sites__c</fullName>
        <inlineHelpText>Please enter the number of sites that the customer will implement</inlineHelpText>
        <label>Number of Sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_UC_Users__c</fullName>
        <description>Number of unified communication users</description>
        <inlineHelpText>Enter number of unified communication users</inlineHelpText>
        <label>Number of UC Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_PureCloud_Enablement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A link to the Opportunity record PureCloud Enablement extension record for Enablement details used by PureCloud Project records
Owned by : Professional Services</description>
        <label>PureCloud Enablement</label>
        <referenceTo>SourceOpportunities__c</referenceTo>
        <relationshipLabel>PureCloud Projects</relationshipLabel>
        <relationshipName>PureCloud_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>PureCloud_Preview_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Solution_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PC Solution Design Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Solution_Design__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>PC SDO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Solution_Design__c</referenceTo>
        <relationshipLabel>PureCloud Projects</relationshipLabel>
        <relationshipName>PureCloud_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PS_PM_Email__c</fullName>
        <description>Description: The email address of the Professional Services Project Manager associated to this PureCloud Project record
Owner: Professional Services</description>
        <label>PS PM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PS_PM_Owner_Name__c</fullName>
        <description>Description:Stores the name of the Professional Services PS Project Manager who is the owner of the associated PureCloud Project
Owner: Professional Services</description>
        <label>PS PM Owner</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Trial</fullName>
                </value>
                <value>
                    <fullName>Pilot</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Production Add-On</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PureCloud_Administrator_Email__c</fullName>
        <formula>Opportunity_PureCloud_Enablement__r.PureCloud_Administrator__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PureCloud Administrator Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PureCloud_OrgID_Obsolete__c</fullName>
        <label>PureCloud OrgID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PureCloud_OrgID__c</fullName>
        <formula>Opportunity__r.Account.PureCloud_OrgID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PureCloud OrgID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PureCloud_Request_Notes__c</fullName>
        <defaultValue>&quot;After submission, please click on the link to add more information.&quot;</defaultValue>
        <description>Field is in effect read-only as its only purpose is to show instructions to a user on the Chatter UI.</description>
        <inlineHelpText>Instructions for submitting a new request</inlineHelpText>
        <label>PureCloud Request Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuickStart_Completion_Date__c</fullName>
        <label>QuickStart Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy Zuora Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>PureCloud Projects</relationshipLabel>
        <relationshipName>PureCloud_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Awaiting Implementation</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIP_Dialtone_Completion_Date__c</fullName>
        <label>SIP/Dialtone Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <formula>Opportunity__r.Country_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Packages__c</fullName>
        <label>Service Packages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PureCloud Bronze Annual Prepay Premier Success Service</fullName>
                </value>
                <value>
                    <fullName>PureCloud Silver Annual Prepay Premier Success Service</fullName>
                </value>
                <value>
                    <fullName>PureCloud Gold Annual Prepay Premier Success Service</fullName>
                </value>
                <value>
                    <fullName>PureCloud Platinum Annual Prepay Premier Success Service</fullName>
                </value>
                <value>
                    <fullName>PureCloud Bronze Monthly Premier Success Service</fullName>
                </value>
                <value>
                    <fullName>PureCloud Silver Monthly Premier Success Service</fullName>
                </value>
                <value>
                    <fullName>PureCloud Gold Monthly Premier Success Service</fullName>
                </value>
                <value>
                    <fullName>PureCloud Platinum Monthly Premier Success Service</fullName>
                </value>
                <value>
                    <fullName>PureCloud Services Tokens Bundle</fullName>
                </value>
                <value>
                    <fullName>PureCloud QuickStart Enablement (does not exist yet, new in Jan 2017)</fullName>
                </value>
                <value>
                    <fullName>PureCloud QuickStart Core Enablement (retiring 12/31/16)</fullName>
                </value>
                <value>
                    <fullName>PureCloud QuickStart Enhanced Enablement (retiring 12/31/16)</fullName>
                </value>
                <value>
                    <fullName>PureCloud QuickStart API Enablement (retiring 12/31/16)</fullName>
                </value>
                <value>
                    <fullName>PureCloud Engage Outbound Dialer Enablement Package (retiring 12/31/16)</fullName>
                </value>
                <value>
                    <fullName>PureCloud Bronze Success Package</fullName>
                </value>
                <value>
                    <fullName>PureCloud Silver Success Package</fullName>
                </value>
                <value>
                    <fullName>PureCloud Gold Success Package</fullName>
                </value>
                <value>
                    <fullName>PureCloud Foundation Package</fullName>
                </value>
                <value>
                    <fullName>PureCloud Services Tokens Bundle 1K MACD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trial_Contact_Email__c</fullName>
        <formula>Trial_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trial Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trial Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>PureCloud_Trials</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PureCloud Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Current_Delivery_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>PureCloud Project</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PureCloud Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Mandatory_Criteria</fullName>
        <active>true</active>
        <description>Mandatory Criteria prior to accept “Queued for Automation” value on PureCloud Project Auto Activation Status</description>
        <errorConditionFormula>AND(
  ISPICKVAL(Auto_Activation_Status__c,&quot;Queued for Automation&quot;),
  OR(
    ISBLANK(TEXT( AWS_Predefined_Region__c )),
    ISBLANK( Account__c),
    ISBLANK( Trial_Contact__c ),
    ISBLANK( Trial_Contact__r.Email),
    ISBLANK(TEXT(Contact_Language__c)),
    ISBLANK(Opportunity__c ),
    ISBLANK(Opportunity__r.Id ),
    ISBLANK( BMQuote__c ),
    ISBLANK( BMQuote__r.Id ),
    BMQuote__r.BigMachines__Status__c != &apos;Order Accepted&apos;
  )
)</errorConditionFormula>
        <errorMessage>Project must have AWS Region, Account, Contact Email &amp; Language, Opportunity, Quote and Quote status (Order Accepted) before moving to Queued for Automation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UC_users_and_feature</fullName>
        <active>true</active>
        <description>The UC functionality option must be selected and a number of UC users entered, or the option must not be selected and no users must be entered.</description>
        <errorConditionFormula>OR(
AND(
INCLUDES(Desired_General_Functionality__c , &quot;UC&quot;),
ISBLANK(Number_of_UC_Users__c)
),
AND(
NOT(ISBLANK(Number_of_UC_Users__c)),
NOT(INCLUDES(Desired_General_Functionality__c , &quot;UC&quot;))
)
)</errorConditionFormula>
        <errorMessage>For UC PureCloud requests, please select the UC general functionality option and enter a number of UC users.</errorMessage>
    </validationRules>
</CustomObject>